titlesoverflow fixed

--- a/exercises_page/exercises_page.css
+++ b/exercises_page/exercises_page.css
@@ -160,6 +160,14 @@ main {
 			object-fit: cover;
 			border-radius: 22px;
 		}
+
+		& a h2 {
+			overflow: hidden;
+			display: -webkit-box;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
+			text-overflow: ellipsis;
+		}
 	}
 }
 
